# p-ata

./: Cargo.toml  README.md
interface/: Cargo.toml
interface/src/: address.rs  error.rs  instruction.rs  lib.rs
program/: Cargo.toml
program/src/: entrypoint.rs  lib.rs  processor.rs  utils.rs
